add_executable(audio_engine_spsc_ring_test                unit/spsc_ring_test.cpp)
add_executable(audio_engine_slot_map_test                 unit/slot_map_test.cpp)
add_executable(audio_engine_bus_graph_test                unit/bus_graph_test.cpp)
add_executable(audio_engine_compressor_test               unit/compressor_test.cpp)
add_executable(audio_engine_decoder_test                  unit/decoder_test.cpp)
add_executable(audio_engine_priority_eviction_test        unit/priority_eviction_test.cpp)
add_executable(audio_engine_occlusion_lpf_test            unit/occlusion_lpf_test.cpp)
add_executable(audio_engine_doppler_smoothing_test        unit/doppler_smoothing_test.cpp)
add_executable(audio_engine_air_absorption_test           unit/air_absorption_test.cpp)
add_executable(audio_engine_reverb_send_test              unit/reverb_send_test.cpp)
add_executable(audio_engine_voice_codec_test              unit/voice_codec_test.cpp)
add_executable(audio_engine_binaural_spatializer_test     unit/binaural_spatializer_test.cpp)
add_executable(audio_engine_production_readiness_test    unit/production_readiness_test.cpp)
add_executable(audio_engine_multiplayer_readiness_test   unit/multiplayer_readiness_test.cpp)
add_executable(audio_engine_jitter_buffer_test           unit/jitter_buffer_test.cpp)
add_executable(audio_engine_voice_telemetry_test         unit/voice_telemetry_test.cpp)
add_executable(audio_engine_sound_bank_test              unit/sound_bank_test.cpp)
add_executable(audio_engine_crossfade_test               unit/crossfade_test.cpp)
add_executable(audio_engine_integration_kitchen_sink_test unit/integration_kitchen_sink_test.cpp)

# Tests need access to internal headers (src/) for util classes that aren't
# part of the public API.
foreach(_t spsc_ring slot_map bus_graph compressor decoder priority_eviction occlusion_lpf doppler_smoothing air_absorption reverb_send voice_codec binaural_spatializer production_readiness multiplayer_readiness jitter_buffer voice_telemetry integration_kitchen_sink)
    target_include_directories(audio_engine_${_t}_test PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/src)
endforeach()

# Tests that exercise compiled implementations link against the library.
# Header-only tests (spsc_ring, slot_map) don't need to.
target_link_libraries(audio_engine_spsc_ring_test                 PRIVATE Threads::Threads)
target_link_libraries(audio_engine_bus_graph_test                 PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_compressor_test                PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_decoder_test                   PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_priority_eviction_test         PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_occlusion_lpf_test             PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_doppler_smoothing_test         PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_air_absorption_test            PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_reverb_send_test               PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_voice_codec_test               PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_binaural_spatializer_test      PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_production_readiness_test     PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_multiplayer_readiness_test    PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_jitter_buffer_test            PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_voice_telemetry_test          PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_sound_bank_test               PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_crossfade_test                PRIVATE audio_engine::audio_engine)
target_link_libraries(audio_engine_integration_kitchen_sink_test  PRIVATE audio_engine::audio_engine)

add_test(NAME spsc_ring_test                COMMAND audio_engine_spsc_ring_test)
add_test(NAME slot_map_test                 COMMAND audio_engine_slot_map_test)
add_test(NAME bus_graph_test                COMMAND audio_engine_bus_graph_test)
add_test(NAME compressor_test               COMMAND audio_engine_compressor_test)
add_test(NAME decoder_test                  COMMAND audio_engine_decoder_test)
add_test(NAME priority_eviction_test        COMMAND audio_engine_priority_eviction_test)
add_test(NAME occlusion_lpf_test            COMMAND audio_engine_occlusion_lpf_test)
add_test(NAME doppler_smoothing_test        COMMAND audio_engine_doppler_smoothing_test)
add_test(NAME air_absorption_test           COMMAND audio_engine_air_absorption_test)
add_test(NAME reverb_send_test              COMMAND audio_engine_reverb_send_test)
add_test(NAME voice_codec_test              COMMAND audio_engine_voice_codec_test)
add_test(NAME binaural_spatializer_test     COMMAND audio_engine_binaural_spatializer_test)
add_test(NAME production_readiness_test     COMMAND audio_engine_production_readiness_test)
add_test(NAME multiplayer_readiness_test    COMMAND audio_engine_multiplayer_readiness_test)
add_test(NAME jitter_buffer_test            COMMAND audio_engine_jitter_buffer_test)
add_test(NAME voice_telemetry_test          COMMAND audio_engine_voice_telemetry_test)
add_test(NAME sound_bank_test               COMMAND audio_engine_sound_bank_test)
add_test(NAME crossfade_test                COMMAND audio_engine_crossfade_test)
add_test(NAME integration_kitchen_sink_test COMMAND audio_engine_integration_kitchen_sink_test)
